[package]
name = "rsa-decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.dev.package.num-bigint-dig]
opt-level = 3

[dependencies]
base64 = "0.21.4"
rand = "0.8.5"
rsa = "^0.9.2"
rust-crypto = "*"
sha1 = "0.10.6"
sha2 = "0.10.8"
